--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,12 +35,12 @@ header span{
 }
 
 
-header.open {
-  background-color: green;
-  color: white;
-}
-
-header.closed {
-  background-color: red;
-  color: white;
+header .restaurant.open {
+    background-color: green;
+    color: white;
+  }
+  
+.restaurant.closed {
+    background-color: red;
+    color: white;
 }
