--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -9,12 +9,16 @@
 .select{
     padding: 1rem;
     border-radius: 50%;
-    transform: translateY(-60%);
+    transform: translateY(-60%);    
+    animation: bg .5s forwards alternate;
     transition: all .4s ease-in-out;
-    animation: bg 400ms forwards  ease-in-out;
 }
 
+
 @keyframes bg {
+    0%{
+        transform: translateY(0);  
+    }
     100%{
         border-radius: 50%;
         background-color: #fff;       
@@ -29,14 +33,3 @@
     font-size: 2rem;
 }
 
-.confirm{
-    position: relative;
-    width: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1.5rem;
-    color: #fff;
-    font-weight: 700;
-    border-radius: 8px;
-}
