--- a/src/components/CartButton/CartButton.css
+++ b/src/components/CartButton/CartButton.css
@@ -7,10 +7,9 @@
     border: none;
     cursor: pointer;
     position: fixed;
-    right: 0;
-    margin-left: 20px;
+    right: 10px;
+    top: 10px;
     color: red;
-    border-radius: 20px;
   }
   
   .cart-status {
@@ -19,9 +18,9 @@
     height: 15px;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     color: white;
-    font-size: 11px;
+    font-size: 18px;
     font-weight: 600;
     border-radius: 15px;
     display: flex;
