--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -3,7 +3,7 @@
     margin: 100px auto 200px;
     animation: spin 1s linear infinite;
     width: 100%;
-    color: red;
+    color: rgb(4, 114, 2);
     
   }
   
